# tuicore

./: .gitignore  AGENTS.md  Cargo.toml  PRODUCT.md  README.md  SKILL.md  layout-pull-based-improvement.md
examples/: ai_dock_demo.rs  gallery.rs  gallery_new_runtime.rs  quickstart.rs
examples/gallery/: component_list.rs  data_view_preview.rs  input_preview.rs  panel_preview.rs  scroll_preview.rs  shared.rs  spinner_preview.rs  tabs_preview.rs
examples/gallery_demo/: data.rs  dialogs.rs  dropdowns.rs  inputs.rs  layouts.rs  mod.rs  notifications.rs  panels.rs  relative_date.rs  status_bar.rs  tabs.rs
examples/gallery_demo/forms/: mod.rs  (+3 more)
src/: animation.rs  app.rs  border.rs  children.rs  config.rs  event.rs  focus.rs  form.rs  hotkey.rs  keybindings.rs  lib.rs  node.rs  overlay.rs  preset.rs  scroll.rs  search.rs  separator.rs  spacing.rs  store.rs  theme.rs  ui.rs
src/components/: ai_dock.rs  button.rs  chip.rs  confirmation_dialog.rs  data_view.rs  date_time_indicator.rs  dialog.rs  dialog_layer.rs  dropdown.rs  flex.rs  form_field.rs  grid.rs  list.rs  menu.rs  mod.rs  notifications.rs  overlay.rs  panel.rs  spinner.rs  split.rs  stack.rs  status_action.rs  status_bar.rs  store_debug.rs  tabs.rs  tag_input.rs  text_input.rs  text_input_tests.rs  textarea_input.rs  textarea_input_tests.rs  toggle.rs  typography.rs  weather_forecast_dialog.rs  weather_indicator.rs  weather_provider.rs
src/runtime/: app.rs  dispatcher.rs  event_source.rs  focus.rs  layout.rs  mod.rs  renderer.rs  scheduler.rs  terminal.rs
tests/: data_view.rs  form.rs  relative_date_public.rs
(+32 files in other folders)
