[package]
name = "tuicore"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.30", features = ["widget-calendar"] }
time = { version = "0.3", features = ["local-offset"] }
toml = "0.9"
rig = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

[dev-dependencies]
futures = { version = "0.3" }
dotenvy = { version = "0.15" }
schemars = "1"
